调整菜单布局